[FIX]: remove Hero section padding on small screens

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -20,3 +20,10 @@
 .hero_description {
   font-size: 1.5rem;
 }
+
+@media screen and (max-width: 768px) {
+  .hero {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+}
